add style for table and form

--- a/src/main/webapp/css/table.css
+++ b/src/main/webapp/css/table.css
@@ -1,2 +1,33 @@
 table {
+    text-align: center; /*Выравнивание текста во всей таблице*/
+    border-collapse: collapse; /* Убираем линии между ячейками */
+    width: 100%; /*Ширина таблицы*/
+}
+
+
+th,
+td {
+    padding: 10px; /*Отступ внутри ячейки*/
+}
+
+
+td:first-child {
+    text-align: left; /*Выравнивание текст первого столбца таблицы*/
+    width: 25%; /*Ограничиваем ширину первого столбца*/
+}
+
+td {
+    width: 10%; /*Ограничиваем ширину столбцов*/
+}
+
+
+tr:nth-child(odd) {
+    background: white; /*Заливка нечетных строк*/
+}
+tr:nth-child(even) {
+    background: #e0e0e0; /*Заливка четных строк*/
+}
+
+th {
+    background: #ff9935; /*Заливка заголовков столбцов*/
 }
