--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,3 +1,21 @@
 * { font-family:"Lucida Sans Unicode", "Lucida Grande", Sans-Serif, sans-serif;
     color: #3b3b3b;
 }
+
+.box-title {
+    padding: 10px;
+    width: auto;
+    text-align: center;
+}
+
+.box-form {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box-table {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
