--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .box-table {
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    width: auto;
+    margin-left: 10%;
+    margin-right: 10%;
 }
